<resources>
    <string name="app_name">Emp_Asset_MgmtApp</string>
    <string name="logout">Are you sure you want to logout ?</string>
    <string name="deviceId" />
    <string name="message">Message</string>
    <string name="ok">OK</string>
    <string name="designation">Designation</string>
    <string name="department">Department</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="alert">Alert</string>
    <string name="status">Status</string>
    <string name="item">Item</string>
    <string name="asset_name">Asset Name</string>
    <string name="serial">Serial</string>
    <string name="tag_type">Tag Type</string>
    <string name="action">Action</string>
    <string name="ip_address">IP Address</string>
    <string name="submit">SUBMIT</string>
    <string name="device_id">Device Id :</string>
    <string name="connected" />
    <string name="user_id">User Id</string>
    <string name="admin">admin</string>
    <string name="password">Password</string>
    <string name="_123">123</string>
    <string name="login">LOGIN</string>
    <string name="v_1_0_0">v.1.0.0</string>
    <string name="signal_strength">Signal Strength</string>
    <string name="imagelogout">imageLogout</string>
    <string name="asset_id">Asset ID</string>
    <string name="category">Category</string>
    <string name="tag_data">Tag Data</string>
    <string name="detag">Detag</string>
    <string name="scan_asset_name">Scan Asset Name :</string>
    <string name="scan_asset_id">Scan Asset ID :</string>
    <string name="asset">Asset</string>
    <string name="connect">CONNECT</string>
    <string name="employee">Employee</string>
    <string name="logo">Logo</string>
</resources>