<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/colorprimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageView
            android:id="@+id/img_setting"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_5sdp"
            android:src="@drawable/settingicon" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/loginPart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/_15sdp">

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/manager"
                android:visibility="gone"
                app:tint="@color/colorprimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:gravity="center"
                android:text="Employee &amp; Asset\n Management"
                android:textColor="@color/colorprimary"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp">

            <TextView
                android:id="@+id/deviceId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/device_id"
                android:textAlignment="center"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:textColor="@color/colorprimary"/>

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_4sdp"
            app:strokeColor="@color/lightgraycolor">

            <EditText
                android:id="@+id/edtusername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/transparent"
                android:drawableStart="@drawable/usericon"
                android:drawablePadding="@dimen/_9sdp"
                android:hint="@string/user_id"
                android:imeOptions="actionNext"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:text="@string/admin"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_4sdp"
            app:strokeColor="@color/lightgraycolor">

            <EditText
                android:id="@+id/edtpassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/transparent"
                android:drawableStart="@drawable/passwordicon"
                android:drawablePadding="@dimen/_9sdp"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:text="@string/_123"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/Login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:cardBackgroundColor="@color/colorprimary"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_4sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentBottom="true"
        android:gravity="start|top"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_2sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:paddingBottom="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:gravity="center|start"
            android:padding="@dimen/_3sdp"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp">

            <ImageView
                android:layout_width="@dimen/_120sdp"
                android:layout_height="match_parent"
                android:src="@drawable/max_logo" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/v_1_0_0"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>
