<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    android:elevation="@dimen/_4sdp"
    app:cardCornerRadius="@dimen/_8sdp">

    <!-- Use a RelativeLayout to position secLayout on the right -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- First LinearLayout with ImageView and TextView content -->
        <LinearLayout
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:id="@+id/emp_image"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_15sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/usericon" />

            <LinearLayout
                android:layout_width="212dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/emp_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Employee Name"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/empmaildid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/emp_designation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/designation"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/emp_department"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/department"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>
        </LinearLayout>

        <!-- Second LinearLayout (secLayout) placed on the right -->
        <LinearLayout
            android:id="@+id/secLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/emp_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_8sdp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:text="@string/status"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/emp_item"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@string/item"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>
