<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activities.asset.AssetActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/colorprimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageView
            android:id="@+id/img_logout"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="end"
            android:contentDescription="@string/imagelogout"
            android:src="@drawable/logout" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_2sdp"
                android:text="@string/asset_id"
                android:textColor="@color/colorprimary"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/assetidtxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingStart="@dimen/_2sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_2sdp"
                android:text="@string/asset_name"
                android:textColor="@color/colorprimary"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/assetnametxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingStart="@dimen/_2sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_2sdp"
                android:text="@string/category"
                android:textColor="@color/colorprimary"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/assetcategorytxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingStart="@dimen/_2sdp"
                android:paddingEnd="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_2sdp"
                android:text="@string/status"
                android:textColor="@color/colorprimary"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/assetstatustxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingStart="@dimen/_2sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_2sdp"
                android:text="@string/tag_data"
                android:textColor="@color/colorprimary"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/epiId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingStart="@dimen/_2sdp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <TextView
            android:id="@+id/scanassetdatatxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_2sdp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/assetDetailCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:visibility="gone"
            app:cardCornerRadius="@dimen/_6sdp"
            app:cardElevation="@dimen/_2sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_16sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_2sdp"
                        android:text="@string/scan_asset_id"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/scanassetidtxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:gravity="end"
                        android:paddingEnd="@dimen/_10sdp"
                        android:paddingStart="@dimen/_2sdp"
                        android:text=""
                        android:textColor="@color/graycolor"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_2sdp"
                        android:text="@string/scan_asset_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/scanassetname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:gravity="end"
                        android:paddingEnd="@dimen/_10sdp"
                        android:paddingStart="@dimen/_2sdp"
                        android:text=""
                        android:textColor="@color/graycolor"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/detag_btn"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:cardBackgroundColor="@color/colorprimary"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_4sdp"
                    app:strokeColor="@color/colorprimary">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/detag"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>
